# elixir-py

./: .example.env  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  render.yaml  update_openllmetry.sh
.github/workflows/: ci.yml  main.yml  publish.yml  publish_test.yaml
elixir/: __init__.py  instruments.py  telemetry.py
elixir/api/: requests.py  s3.py
elixir/collect/: s3.py  twilio.py
elixir/config/: __init__.py  constants.py
elixir/decorators/: __init__.py  base.py  trace.py
elixir/metrics/: metrics.py
elixir/sdk/: __init__.py  fetcher.py  telemetry.py
elixir/sdk/decorators/: __init__.py  base.py
elixir/sdk/tracing/: __init__.py  content_allow_list.py  context_manager.py  tracing.py
elixir/tracing/: context_manager.py  semconv.py  tracing.py
elixir/utils/: string.py  twilio.py
examples/apps/daily-chatbot/: .example.env  README.md  pyproject.toml
examples/apps/daily-chatbot/scripts/: upload_pinecone_embeddings.py
examples/apps/daily-chatbot/scripts/assets/: insurance.txt
examples/apps/daily-chatbot/src/: bot.py  runner.py  server.py
examples/apps/daily-chatbot/src/pipecat/pipeline/: task.py
examples/apps/daily-chatbot/src/pipecat/services/: anthropic.py  openai.py
examples/apps/daily-chatbot/src/pipecat/services/to_be_updated/: cloudflare_ai_service.py
examples/apps/daily-chatbot/src/routes/: root.py  twilio.py
examples/apps/daily-chatbot/src/services/: bot.py  pipecat.py
examples/apps/daily-chatbot/src/tools/: __init__.py  fetch_weather.py  schedule_appointment.py  search_insurance_policies.py
examples/apps/daily-chatbot/src/utils/: daily.py
examples/apps/otel-collector/: Dockerfile  README.md  otel-config.yaml
examples/apps/pipecat-chatbot/: README.md  env.example  pyproject.toml
examples/apps/pipecat-chatbot/src/: bot_runner.py  bot_twilio.py
examples/apps/pipecat-chatbot/src/services/: pipecat.py
examples/apps/pipecat-chatbot/src/tools/: search_insurance_policies.py
examples/apps/pipecat-daily-chatbot/: README.md
examples/apps/pipecat-daily-chatbot/src/: runner.py
examples/apps/pipecat-daily-chatbot/src/services/: pipecat.py
examples/apps/pipecat-daily-chatbot/src/tools/: search_insurance_policies.py
examples/apps/pipecat-daily-chatbot/src/utils/: daily.py
examples/apps/pipecat-twilio-chatbot/: Dockerfile  README.md  pyproject.toml
examples/apps/pipecat-twilio-chatbot/src/: bot.py  server.py
examples/apps/pipecat-twilio-chatbot/src/templates/: streams.xml
examples/apps/twilio-chatbot/: README.md  env.example  pyproject.toml
examples/apps/twilio-chatbot/src/: bot.py
examples/apps/twilio-chatbot/src/services/: pipecat.py
examples/apps/twilio-chatbot/src/tools/: get_calendar_schedule.py  search_insurance_policies.py
examples/apps/vapi-chatbot/: Dockerfile  README.md  example.env  pyproject.toml
examples/apps/vapi-chatbot/app/: main.py
examples/apps/vapi-chatbot/app/api/: __init__.py  custom_llm.py  webhook.py
examples/apps/vapi-chatbot/app/tools/: __init__.py  get_calendar_schedule.py  schedule_appointment.py  search_insurance_policies.py
examples/apps/vapi-chatbot/app/types/: vapi.py
examples/apps/vapi-chatbot/scripts/: call_vapi_agent.py
examples/scripts/: collect_twilio_audio.py
python/apps/daily-chatbot/: .example.env  Dockerfile  README.md  bot.py  pyproject.toml  server.py
python/apps/daily-chatbot/utils/: daily_helpers.py
python/shared/pipecat/: pyproject.toml
python/shared/pipecat/src/pipecat/decorators/: trace.py
python/shared/pipecat/src/pipecat/services/: openai.py
references/opentelemetry/: README.md
tests/: conftest.py  test_association_properties.py  test_metrics.py  test_nested_tasks.py  test_observe.py  test_requests.py  test_sdk_initialization.py  test_upload_audio.py  test_workflows.py
tests/cassettes/test_nested_tasks/: test_nested_tasks.yaml
tests/cassettes/test_sdk_initialization/: test_resource_attributes.yaml
tests/cassettes/test_workflows/: test_simple_workflow.yaml  test_streaming_workflow.yaml
tests/utils/: in_memory_metrics_exporter.py
