[tool.poetry]
name = "daily-chatbot"
version = "0.1.0"
description = ""
authors = ["Andrew Chang <andrew@tryelixir.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
elixir-ai = { path = "../../..", develop = true }
twilio = "^9.1.1"
pipecat-ai = {extras = ["daily", "openai", "silero"], version = "^0.0.29"}

[tool.poetry.group.dev.dependencies]
pinecone-client = "^4.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
