[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Andrew Chang <andrew@acalabs.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = {extras = ["async"], version = "^3.0.2"}
flask-cors = "^4.0.0"
uvicorn = "^0.30.1"
python-dotenv = "^1.0.1"
elixir-ai = { path = "../../..", develop = true }
pinecone = "^4.0.0"
vapi-python = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"