[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Andrew Chang <andrew@acalabs.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = {extras = ["async"], version = "^3.0.2"}
flask-cors = "^4.0.0"
uvicorn = "^0.30.1"
python-dotenv = "^1.0.1"
elixir-ai = { path = "../../..", develop = true }
vapi-python = "^0.1.9"
openai = "^1.35.10"
gunicorn = "^22.0.0"
pinecone-client = "4.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"