[tool.poetry]
name = "daily-chatbot"
version = "0.1.0"
description = "Daily Pipecat chatbot"
authors = ["Andrew Chang <andrew@tryelixir.io>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "1.0.1"
requests = "2.32.2"
fastapi = "0.111.0"
uvicorn = "0.29.0"
pipecat = { path = "../../shared/pipecat" }
traceloop-sdk = "^0.20.0"
twilio = "^9.1.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"